--- a/VueJSStuff/Views/Home/Index.cshtml
+++ b/VueJSStuff/Views/Home/Index.cshtml
@@ -1,31 +1,40 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿<div id="app">
+    <input type="text" class="form-control" v-model="message" />
+    <button class="btn btn-primary" v-on:click="reverseClick">Reverse</button>
+    <h3>{{message}}</h3>
+    <button class="btn btn-success" v-on:click="addRando">Add Random Number</button>
+    <button class="btn btn-warning" v-on:click="sortClick">Sort</button>
+    <ul>
+        <template v-for="number in numbers">
+            <li style="font-size: 26px;">{{number}}</li>
+        </template>
+    </ul>
+    <br />
+    <div class="row">
+        <div class="col-md-4">
+            <input type="text" v-model="min" class="form-control" placeholder="Min" />
+        </div>
+        <div class="col-md-4">
+            <input type="text" v-model="max" class="form-control" placeholder="Max" />
+        </div>
+        <div class="col-md-4">
+            <button class="btn btn-primary" v-on:click="addRandomBetween">Add</button>
+        </div>
+    </div>
+    <div style="height: 500px; overflow: scroll;">
+        <template v-for="num in randomNumbers">
+            <div class="well" style="margin: 1px; padding: 1px;">
+                <h3>{{num}}</h3>
+            </div>
+        </template>
+
+    </div>
+
+</div>
+
+
+
+@section scripts {
+    <script src="/Scripts/vue.min.js"></script>
+    <script src="/Scripts/index.js"></script>
 }
-
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
