--- a/VueJSStuff/Views/Home/People.cshtml
+++ b/VueJSStuff/Views/Home/People.cshtml
@@ -1,5 +1,6 @@
 ﻿<div id="app">
     <button class="btn btn-success" v-on:click="newPerson">Add Person</button>
+    <button class="btn btn-info" v-on:click="sortClick">Sort</button>
     <table class="table table-bordered">
         <tr>
             <th>First Name</th>
